--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@blackbox-vision/ra-language-spanish": "^3.19.10",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "prop-types": "^15.8.1",
+    "ra-data-json-server": "^4.2.1",
+    "ra-data-simple-rest": "^4.2.4",
     "react": "^18.2.0",
+    "react-admin": "^4.2.2",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
