--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@blackbox-vision/ra-language-spanish": "^3.19.10",
+    "@g-loot/react-tournament-brackets": "^1.0.18-beta.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
